--- a/thesis intermedia/2- Background/2.1 Real-Time Analytics Systems.md
+++ b/thesis intermedia/2- Background/2.1 Real-Time Analytics Systems.md
@@ -1,25 +1,8 @@
 [[Background]]
-- Explica o que é _real-time data processing_ (event-driven, streaming-first architecture).
-    
-- Descreve as camadas típicas:
-    
-    - **Ingestion** (Kafka, Kinesis, Flink sources)
-        
-    - **Processing** (Flink, Spark Streaming, Kafka Streams)
-        
-    - **Serving/Visualization** (Grafana, Superset, Looker, PowerBI, etc.)
-        
-- Aborda conceitos como _low latency_, _streaming semantics_ (_at least once_, _exactly once_), _windowing_, _stateful processing_.
-    
-- Podes referir desafios: escalabilidade, tolerância a falhas, sincronização de streams.
-    
-
-_(Equivalente à secção “Dependability” no exemplo — contextualiza o domínio técnico.)_
-
-
 ---
 ### 2.1 Real-Time Analytics Systems
-In the era of data-driven decision-making, organizations increasingly depend on real-time analytics to monitor operations, detect anomalies, and respond to events as they occur. Unlike traditional batch processing, which analyzes static datasets collected at fixed intervals, **real-time analytics systems** continuously process and analyze data streams with minimal latency, allowing insights to be generated immediately after events are produced. This capability is particularly crucial in dynamic operational environments such as contact centers, where second-by-second visibility into agent performance, queue times, and service quality directly influences both customer experience and operational efficiency (Stonebraker, 2018).
+
+In the era of data-driven decision-making, organizations increasingly depend on real-time analytics to monitor operations, detect anomalies, and respond to events as they occur. Unlike traditional batch processing, which analyzes static datasets collected at fixed intervals, **real-time analytics systems** continuously process and analyze data streams with minimal latency, allowing insights to be generated immediately after events are produced. This capability is particularly crucial in dynamic operational environments such as contact centers, where second-by-second visibility into agent performance, queue times, and service quality directly influences both customer experience and operational efficiency.
 
 A **real-time analytics pipeline** generally follows a _streaming-first_ architecture composed of three main layers: data ingestion, data processing, and data serving or visualization. Each layer plays a distinct role in converting raw event streams into actionable insights that can be displayed, queried, or acted upon in near real time.
 
