--- a/thesis intermedia/3- state of art/3.3/3.3.1 LLMs.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.1 LLMs.md
@@ -1,4 +1,7 @@
 	# **3.1 Fundamentos e Tecnologias Relacionadas**
+
+[StructEval: Benchmarking LLMs’ Capabilities to Generate Structural Outputs](https://arxiv.org/html/2505.20139v1)
+[Are LLMs good at structured outputs? A benchmark for evaluating structured output capabilities in LLMs - ScienceDirect](https://www.sciencedirect.com/science/article/abs/pii/S0306457324001687)
 ## ==há algumas referências em falta==
 A evolução recente dos **Modelos de Linguagem de Grande Escala (LLMs)** redefiniu a forma como sistemas computacionais interpretam e produzem linguagem natural. Estes modelos tornaram-se o núcleo de múltiplas soluções de inteligência artificial, permitindo transformar instruções textuais em representações estruturadas e executáveis. No contexto mais amplo dos sistemas de análise de dados, os LLMs representam a camada de **interpretação semântica** que viabiliza a tradução de comandos expressos em linguagem natural para formatos formais — como JSON ou SQL.
 
@@ -35,11 +38,11 @@ O **Gemini 2.5**, desenvolvido pela **Google DeepMind**, representa a mais recen
 
 A versão **Gemini 2.5 Pro** introduz o modo **_Deep Think_**, concebido para **aumentar a profundidade de raciocínio matemático e multimodal**, permitindo **cadeias de inferência mais longas e explicáveis**. Segundo dados oficiais da **Google DeepMind**, o modelo alcança **88 % no _benchmark AIME 2025_** [4], demonstrando um avanço substancial face à geração 2. Em contrapartida, **avaliações independentes** reportadas por plataformas de _benchmarking_ como o **ArtificialAnalysis** indicam valores ligeiramente inferiores, em torno de **87,7 %**, diferença atribuída às **variações metodológicas nos protocolos de teste** [11].
 
-Em tarefas de **engenharia de software**, o **Gemini 2.5 Pro** mantém um desempenho competitivo, alcançando **53,6 % no _SWE-bench Verified_** [15], de acordo com o **leaderboard oficial SWE**. Dados divulgados pela **Google DeepMind** apontam ainda para **56,9 % em _single attempts_** e **67,2 % em _multiple attempts_**, evidenciando a eficácia do modo **_Deep Think_** em contextos de **raciocínio iterativo e resolução incremental de problemas**.
+Em tarefas de **engenharia de software**, o **Gemini 2.5 Pro** mantém um desempenho competitivo, alcançando **53,6 % no _SWE-bench Verified_** [15], de acordo com o **leaderboard oficial SWE**. ==Dados divulgados pela **Google DeepMind** apontam ainda para **56,9 % em _single attempts_** e **67,2 % em _multiple attempts_**, evidenciando a eficácia do modo **_Deep Think_** em contextos de **raciocínio iterativo e resolução incremental de problemas**.==
 
 A variante **Gemini 2.5 Flash**, por sua vez, foi otimizada para **redução de latência e custo operacional**, apresentando **diminuição de 20 % a 30 % no número médio de tokens gerados** sem perdas significativas de qualidade [14]. Esta otimização torna o Flash adequado para **aplicações em tempo real** e **serviços de larga escala**, enquanto o Pro permanece direcionado para **cenários empresariais e científicos de alta complexidade**.
 
-Com uma **janela de contexto superior a 1 milhão de tokens**, o **Gemini 2.5 Pro** posiciona-se entre os modelos com **maior capacidade de processamento contextual** atualmente disponíveis, possibilitando **análises extensas e memória conversacional persistente**. O custo médio de utilização situa-se em cerca de **1,25 USD por milhão de tokens de entrada**, valor competitivo face a modelos de gama equivalente, embora dependente da **configuração de inferência** e da **eficiência de _prompting_**.
+==Com uma **janela de contexto superior a 1 milhão de tokens**, o **Gemini 2.5 Pro** posiciona-se entre os modelos com **maior capacidade de processamento contextual** atualmente disponíveis, possibilitando **análises extensas e memória conversacional persistente**. O custo médio de utilização situa-se em cerca de **1,25 USD por milhão de tokens de entrada**, valor competitivo face a modelos de gama equivalente, embora dependente da **configuração de inferência** e da **eficiência de _prompting_**.==
 
 Por fim, a **integração nativa no ecossistema Google** constitui simultaneamente uma **vantagem operacional e uma limitação tecnológica**: permite **integração otimizada com serviços como o Vertex AI e o Google Cloud Run**, mas restringe a **portabilidade e interoperabilidade** em ambientes **multicloud** ou **infraestruturas autoalojadas**, refletindo o caráter **proprietário e altamente integrado** da arquitetura Gemini.
 
@@ -48,7 +51,7 @@ Conclui-se, assim, que o **Gemini 2.5** se distingue por **combinar raciocínio 
 
 O **Claude 4.5**, desenvolvido pela **Anthropic** e lançado em **setembro de 2025**, representa a evolução mais avançada da linha Claude, concebida segundo os princípios de **IA constitucional**, com ênfase na **segurança, interpretabilidade e fiabilidade operacional** [8]. A sua arquitetura combina **modelos densos de grande escala** com **mecanismos reforçados de controlo de comportamento e filtragem contextual**, consolidando a reputação da Anthropic como pioneira em **IA alinhada e verificável**.
 
-Com uma **janela de contexto de até 200 000 tokens de entrada**, conforme indicado pela documentação oficial da Anthropic, o Claude 4.5 oferece **capacidade de raciocínio prolongado e gestão de memória conversacional extensa**, permitindo aplicações em **assistentes empresariais**, **análise documental** e **execução controlada de código**. Esta expansão de contexto representa um aumento substancial face às versões anteriores (Claude 3 Opus = 200 K, Claude 3.5 Sonnet = 200 K), mantendo a consistência do modelo em interações longas e altamente contextuais.
+==Com uma **janela de contexto de até 200 000 tokens de entrada**, conforme indicado pela documentação oficial da Anthropic, o Claude 4.5 oferece **capacidade de raciocínio prolongado e gestão de memória conversacional extensa**, permitindo aplicações em **assistentes empresariais**, **análise documental** e **execução controlada de código**. Esta expansão de contexto representa um aumento substancial face às versões anteriores (Claude 3 Opus = 200 K, Claude 3.5 Sonnet = 200 K), mantendo a consistência do modelo em interações longas e altamente contextuais.==
 
 Em termos de desempenho, o Claude 4.5 destaca-se nos **_benchmarks_ de engenharia de software**, alcançando **70,6 % no _SWE-bench Verified_** [15] — um dos valores mais elevados entre os modelos disponíveis em 2025. De acordo com dados **auto-reportados pela Anthropic**, versões otimizadas do modelo atingem **até 77,2 %**, demonstrando melhorias consistentes em **raciocínio iterativo**, **planeamento de tarefas complexas** e **interpretação de código** [8].
 
