--- a/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation structure.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation structure.md
@@ -1,177 +1,203 @@
 [[State of art]]
-# **2. Abordagens Tecnológicas**
-# ==rever e estruturar melhor==
-A etapa de **Geração de JSON** no _pipeline_ **NL→Dash** corresponde ao momento em que o sistema converte intenções em **configurações estruturadas e executáveis**, alinhadas com o _schema_ do motor de dashboards. A fiabilidade desta fase depende de mecanismos que assegurem **fidelidade sintática**, **validação semântica** e **baixa latência**, de modo a permitir a interação em tempo real entre o utilizador e o sistema de análise.  
-As subseções seguintes apresentam o **estado da arte das abordagens tecnológicas** que sustentam essa geração estruturada, organizadas em três eixos evolutivos: _function calling nativo_, _validação externa com JSON Schema_ e _decoding estruturado_.
+# **2. Technological Approaches**
+
+The **JSON Generation** stage in the **NL→Dash** pipeline represents the moment when the system converts user intents into **structured and executable configurations**, aligned with the dashboard engine’s schema. The reliability of this stage depends on mechanisms that ensure **syntactic fidelity**, **semantic validation**, and **low latency**, allowing real-time interaction between the user and the analytics system.  
+The following subsections present the **state of the art in technological approaches** that support this structured generation, organized along three evolutionary axes: _native function calling_, _external validation with JSON Schema_, and _structured decoding_.
 
 ---
 
-## **2.1 Function Calling Nativo**
+## **2.1 Function Calling**
 
-O **Function Calling** é um mecanismo introduzido em 2023 pela OpenAI [1] e posteriormente adotado por diversos fornecedores. Em vez de gerar texto livre, o modelo **preenche argumentos de funções registadas** — por exemplo, `create_dashboard(title, layout, metrics, filters)` — devolvendo diretamente uma **estrutura JSON** conforme a assinatura da função [2][3]. Esta técnica define explicitamente os campos esperados e os respetivos tipos, permitindo que o LLM gere saídas estruturadas sem necessidade de pós-processamento complexo.
+**Function Calling** is a mechanism introduced in 2023 by OpenAI [1] and quickly adopted by other providers such as Anthropic (Claude), Google (Gemini), and Microsoft (Azure OpenAI). In this paradigm, the developer pre-registers available functions through **JSON Schemas** that specify the function’s name, description, parameters (data types, required fields, constraints), and optionally the return type. Instead of generating free text, the model selects the appropriate function and fills in the arguments according to the schema, returning a validated JSON structure. [2][3]
 
 ---
 
-### **Pontos Fortes**
+### **Strengths**
 
-- **Integração direta com o motor do LLM** [11]
+- **Direct integration with the LLM engine** [6]
     
-- **Conformidade estrutural:** o modelo é constrangido a gerar uma estrutura JSON válida segundo a assinatura da função, mitigando alucinações de _formato_ típicas de texto livre. Esta mitigação de erros estruturais também foi observada em abordagens de ligação LLM–API como o **Gorilla** [4], que demonstram redução de _API-call hallucinations_ ao impor assinaturas formais;
+- **Structural compliance:** the model is constrained to produce a valid JSON structure that follows the function signature, mitigating _format hallucinations_ typical of free-text generation. This mitigation of structural errors has also been observed in LLM–API linking approaches such as **Gorilla** [4], which demonstrated reduced _API-call hallucinations_ by enforcing syntactic validation.
     
-- **Proposta de ação explícita:** a resposta do modelo representa uma **intenção operacional clara** (a invocação de uma função), em vez de texto descritivo ambíguo que exigiria interpretação adicional; [12]
+- **Explicit action proposal:** the model’s response represents a **clear operational intent** (a function invocation) instead of ambiguous descriptive text requiring additional interpretation. [7]
+    
 
 ---
 
-### **Limitações**
+### **Limitations**
 
-- **Dependência do fornecedor:** os esquemas e APIs são específicos de cada plataforma, gerando _lock-in_ e restrições de portabilidade;
+- **Parameter errors (semantic failures):** even when syntax is correct, models often **hallucinate argument values** or **omit required parameters**. In the **HammerBench** benchmark [5], focused on **multi-turn** _tool-use chaining_ scenarios, HammerBench reports, for **GPT-4o (Prompt)**, **PHR** between **5.52% and 9.31%** and **PMR** between **4.90% and 13.36%**, depending on the data subtype (see **Table 9** in [5]). The metric definitions (_PHR_ measures hallucinated parameter names; _PMR_ measures missing required parameters) highlight **persistent issues with semantic fidelity in generated arguments**.
     
+- **Residual risk of invalid JSON:** although Function Calling improves structural conformance, it does not guarantee **full adherence to a schema**.
     
-- **Erros de parâmetros (falhas semânticas):** mesmo quando a sintaxe é correta, os modelos frequentemente **alucinam valores** de argumentos ou **omitem parâmetros obrigatórios**. No _benchmark_ **HammerBench** [10], centrado em cenários **multi-turn** com _tool-use chaining_, o HammerBench reporta, para **GPT-4o (Prompt)**, **PHR** entre **5,52% e 9,31%** e **PMR** entre **4,90% e 13,36%**, consoante o subtipo de dados (ver **Table 9**). As definições das métricas (_PHR_ mede nomes de parâmetros alucinados; _PMR_ mede nomes obrigatórios em falta) evidenciam **falhas persistentes na fidelidade semântica dos argumentos gerados**;
-    
-- **Possibilidade residual de JSON inválido:** embora o Function Calling melhore a conformidade estrutural, não garante **aderência total a um schema**.
 
 ---
 
-### **Adequação**
+### **Suitability**
 
-O Function Calling é particularmente indicado para **prototipagem rápida** e fluxos de conversação lineares e previsíveis (_happy path_), onde o risco de ambiguidade é reduzido e os contratos de função se mantêm estáveis.  
-Embora os resultados do HammerBench [10] reflitam cenários mais complexos do que o NL→Dash — com interações _multi-turn_ e encadeamento de ferramentas — eles demonstram que o Function Calling permanece vulnerável a erros de parâmetro. Assim, em sistemas que exigem **execução determinística e fiabilidade elevada**, esta técnica **não deve ser utilizada isoladamente**, devendo coexistir com camadas adicionais de validação e governação (Guardrails).
-
----
-
-### **Referências**
-
-[1] OpenAI (2023). _Function Calling and Other API Updates_. Disponível em [https://openai.com/index/function-calling-and-other-api-updates/](https://openai.com/index/function-calling-and-other-api-updates/?utm_source=chatgpt.com)  
-[2] Microsoft Learn (2025). _How to Use Structured Outputs with Azure OpenAI Service_. Disponível em [https://learn.microsoft.com/en-us/azure/ai-foundry/openai/how-to/structured-outputs](https://learn.microsoft.com/en-us/azure/ai-foundry/openai/how-to/structured-outputs?utm_source=chatgpt.com)  
-[3] OpenAI (2025). _Structured Outputs Guide_. Disponível em [https://platform.openai.com/docs/guides/structured-outputs](https://platform.openai.com/docs/guides/structured-outputs?utm_source=chatgpt.com)  
-[4] Patil, S. H. et al. (2023). _Gorilla: Large Language Model Connected with Massive APIs._ arXiv:2305.15334. Disponível em [https://arxiv.org/abs/2305.15334](https://arxiv.org/abs/2305.15334?utm_source=chatgpt.com)  
-[5] JSON Schema Organization (2020). _JSON Schema Draft 2020-12 Specification._ Disponível em [https://json-schema.org/draft/2020-12](https://json-schema.org/draft/2020-12?utm_source=chatgpt.com)  
-[10] Wang, Z. et al. (2024). _HammerBench: Fine-Grained Function-Calling Benchmark for Multi-Turn Tool Use._ arXiv:2412.16516. Disponível em [https://arxiv.org/abs/2412.16516](https://arxiv.org/abs/2412.16516?utm_source=chatgpt.com)
-[11][Introducing Structured Outputs in the API | OpenAI] (https://openai.com/index/introducing-structured-outputs-in-the-api/)
-[12] [Structured model outputs - OpenAI API](https://platform.openai.com/docs/guides/structured-outputs/examples)
+Function Calling is particularly suitable for **rapid prototyping** and **linear, predictable conversational flows** (_happy paths_), where ambiguity is reduced and function contracts remain stable.  
+However, the results from HammerBench [5] show that Function Calling remains vulnerable to parameter-related errors. Therefore, in systems that require **deterministic execution and high reliability**, this technique **should not be used in isolation**, but rather combined with additional validation layers.
 
 ---
 
-## **2.2 Validação Externa com Guardrails**
+### **References**
 
-==A **validação externa** atua como uma camada de _middleware_ entre o LLM e o sistema de destino, validando e, se necessário, reparando _outputs_ JSON após a geração. Este mecanismo constitui uma **segunda linha de defesa**, permitindo verificar tanto a conformidade sintática do JSON (por _schema_) como a plausibilidade dos valores gerados [1]–[3].==
+[1] OpenAI (2023). _Function Calling and Other API Updates_. Available at [https://openai.com/index/function-calling-and-other-api-updates/](https://openai.com/index/function-calling-and-other-api-updates/)  
+[2] OpenAI (2025). Function calling. Available at [https://platform.openai.com/docs/guides/function-calling](https://platform.openai.com/docs/guides/function-calling)  
+[3] OpenAI (2025). _Structured Outputs Guide_. Available at [https://platform.openai.com/docs/guides/structured-outputs](https://platform.openai.com/docs/guides/structured-outputs)  
+[4] Patil, S. H. et al. (2023). _Gorilla: Large Language Model Connected with Massive APIs._ arXiv:2305.15334. Available at [https://arxiv.org/abs/2305.15334](https://arxiv.org/abs/2305.15334)  
+[5] Wang, Z. et al. (2024). _HammerBench: Fine-Grained Function-Calling Benchmark for Multi-Turn Tool Use._ arXiv:2412.16516. Available at [https://arxiv.org/abs/2412.16516](https://arxiv.org/abs/2412.16516?utm_source=chatgpt.com)  
+[6] [Introducing Structured Outputs in the API | OpenAI](https://openai.com/index/introducing-structured-outputs-in-the-api/)  
+[7] [Structured model outputs - OpenAI API](https://platform.openai.com/docs/guides/structured-outputs/examples)
 
-==Ferramentas como o **Guardrails AI** implementam esta lógica por meio de _guards_, ou seja, regras declarativas (_validators_) que avaliam cada _output_ segundo critérios definidos pelo utilizador. O modelo propõe uma resposta (_draft_), sujeita a avaliação de _validators_ específicos; em caso de falha, o sistema pode executar ações corretivas pré-configuradas, incluindo rejeição automática (`exception`), regeneração condicionada ao erro (`reask`), correção automática (`fix`) ou encaminhamento para revisão manual [2], [4],== ~~[5]~~.
+---
 
-### **Pontos Fortes**
+## **2.2 Guardrails**
 
-==**Separação de responsabilidades:** O LLM gera o _output_, mas a aceitação final depende de uma camada de validação independente; esta arquitetura implementa o princípio de _safety layering_, em que a geração e a verificação são isoladas funcionalmente para mitigar a propagação de erros sintáticos ou semânticos através da _pipeline_ [14][15].==
+**Guardrails** are **post-processing validation systems** that operate on the inputs and outputs of LLMs, verifying structural compliance (e.g., adherence to JSON Schema) and, in some cases, applying limited semantic validation [6]. When non-conforming outputs are detected, repair mechanisms may include: (i) **automatic syntactic correction** via libraries such as JSON Repair [17], (ii) **regeneration** by re-asking the LLM [8], or (iii) **rule-based editing** [6]. **Importantly**, these mechanisms present documented limitations, including partial effectiveness (around 61% in complex tasks) and a significant increase in latency [9][10].
 
+Tools such as **Guardrails AI** implement this logic through _guards_—declarative rules (_validators_) that assess each output according to user-defined criteria. The model produces a _draft_ response, which is then evaluated by specific _validators_; if validation fails, the system can execute preconfigured corrective actions, including automatic rejection (`exception`), conditional regeneration based on the detected error (`reask`), automatic correction (`fix`), or routing to manual review [1][2].
 
-==**Validação multi-camada:** A validação sintática assegura o cumprimento de tipos e estruturas (por exemplo, campos e formatos obrigatórios), enquanto a validação semântica avalia a plausibilidade e relevância dos conteúdos (por exemplo, garantir que `montante` está dentro dos limites do domínio financeiro, ou que as datas são coerentes entre si) [4], [5].==
+---
 
-==**Reparação automática (_reask_, _fix_):** Se o _output_ for rejeitado, o Guardrails pode acionar mecanismos automáticos: `reask` instrui o LLM sobre o erro concreto, potenciando a correção autónoma (“o campo `data_vencimento` deve ser posterior a `data_emissao`”), enquanto `fix` pode truncar valores, normalizar formatos ou remover campos inválidos, reduzindo falhas manuais [2].==
-### **Limitações**
+### **Strengths**
 
-==**Latência adicional:** Cada _validator_ contribui para o tempo total de resposta. Validações sintáticas, semânticas e possíveis ciclos de _reask_ podem aumentar significativamente a latência da _pipeline_. _Validators_ complexos ampliam este _overhead_ [9].==
+**Separation of responsibilities:** The LLM generates the output, but final acceptance depends on an independent validation layer. This architecture embodies the _safety layering_ principle, in which generation and verification are functionally isolated to mitigate the propagation of syntactic or semantic errors throughout the pipeline [11][5].
 
-==**Falsos positivos:** _Validators_ mal calibrados geram falsos positivos (rejeições injustificadas), degradando a eficiência e aumentando o custo. _Pipelines_ múltiplas agravam o fenómeno, tornando essencial calibrar _thresholds_ de confiança.  [15][16].==
-### **Adequação**
+**Multi-layer validation:** Syntactic validation ensures compliance with required types and structures (e.g., mandatory fields and formats), while semantic validation assesses the plausibility and consistency of the content (e.g., ensuring that `amount` values are within valid financial limits or that dates are temporally consistent) [2][3].
 
-A utilização de validação externa com Guardrails é especialmente recomendada quando:
+**Automatic repair (_reask_, _fix_):** If an output is rejected, Guardrails can trigger automated mechanisms. `reask` instructs the LLM on the specific error, enabling self-correction (“the field `due_date` must be later than `issue_date`”), while `fix` can truncate values, normalize formats, or remove invalid fields—reducing the need for manual intervention [1].
 
-- **A validação semântica é obrigatória:** Quando JSON válido não basta, sendo crítico garantir limites, _compliance_ e plausibilidade de cada campo [4], [5].
+---
+
+### **Limitations**
+
+**Additional latency:** Each _validator_ contributes to total response time. Syntactic and semantic validations, combined with possible _reask_ cycles, can significantly increase pipeline latency. Complex validators amplify this overhead [4].
+
+**False positives:** Poorly tuned _validators_ can generate false positives (unjustified rejections), reducing efficiency and increasing operational cost [5].
+
+---
+
+### **Suitability**
+
+External validation through Guardrails is particularly recommended when:
+
+- **Semantic validation is mandatory:** When producing syntactically valid JSON is insufficient, and domain constraints must be enforced.
     
-- **Rastreabilidade regulatória:** Para ambientes onde _compliance_ e _logs_ detalhados de todas as decisões automáticas são requisitos impostos por entidades reguladoras [7], [8].
-
+- **Regulatory traceability:** In environments where _compliance_ and detailed logs of all automated decisions are required by regulatory bodies.
+    
 
 ---
 
-### **Referências (IEEE – apenas fontes técnicas formais)**
+### **References (IEEE – formal technical sources only)**
+
+[1] Guardrails AI, _Use on_fail Actions_, 2024. Available: [https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions](https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions)  
+[2] Python Instructor, _Understanding Semantic Validation with Structured Outputs_, 2025. Available: [https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/](https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/)  
+[3] SKA Observatory, _Semantic Validation_, 2024. Available: [https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html](https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html)  
+[4] Guardrails AI, _Performance Considerations_, 2024. Available: [https://guardrailsai.com/docs/concepts/performance](https://guardrailsai.com/docs/concepts/performance)  
+[5] Xu, A. et al., _Designing Multi-layered Runtime Guardrails for Foundation Model Applications_, _arXiv preprint_ arXiv:2408.02205, 2024. Available: [https://arxiv.org/pdf/2408.02205v2](https://arxiv.org/pdf/2408.02205v2)  
+[6] _Bridging the Safety Gap: A Guardrail Pipeline for Trustworthy LLM Inferences_, _arXiv preprint_ arXiv:2502.08142, 2025. Available: [https://arxiv.org/html/2502.08142](https://arxiv.org/html/2502.08142)  
+[7] _@toolsycc/json-repair - npm_, 2024. Available: [https://www.npmjs.com/package/@toolsycc/json-repair](https://www.npmjs.com/package/@toolsycc/json-repair)  
+[8] _The Guard | Your Enterprise AI needs Guardrails_, 2024. Available: [https://www.guardrailsai.com/docs/concepts/guard](https://www.guardrailsai.com/docs/concepts/guard)  
+[9] _SoK: Evaluating Jailbreak Guardrails for Large Language Models_, _arXiv preprint_ arXiv:2506.10597, 2025. Available: [https://arxiv.org/pdf/2506.10597v2](https://arxiv.org/pdf/2506.10597v2)  
+[10] _arXiv preprint_ arXiv:2502.18878, 2025. Available: [https://arxiv.org/pdf/2502.18878](https://arxiv.org/pdf/2502.18878)  
+[11] Bai, Y. et al., _Constitutional AI: Harmlessness from AI Feedback_, _arXiv preprint_ arXiv:2212.08073, 2022. Available: [https://arxiv.org/abs/2212.08073](https://arxiv.org/abs/2212.08073)
+
 
 [1] Guardrails AI, _Use Validators for Structured Data (JSON) Validation_, 2024. Disponível em: [https://guardrailsai.com/docs/hub/how_to_guides/structured_data_validation](https://guardrailsai.com/docs/hub/how_to_guides/structured_data_validation)  
-[2] Guardrails AI, _Use on_fail Actions_, 2024. Disponível em: [https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions](https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions)  
+==[2] Guardrails AI, _Use on_fail Actions_, 2024. Disponível em: [https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions](https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions)==  
 [3] Guardrails AI, _validator-template (Technical Documentation)_, 2024. Disponível em: [https://github.com/guardrails-ai/validator-template](https://github.com/guardrails-ai/validator-template)  
-[4] Python Instructor, _Understanding Semantic Validation with Structured Outputs_, 2025. Disponível em: [https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/](https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/)  
-[5] SKA Observatory, _Semantic Validation_, 2024. Disponível em: [https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html](https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html)  
-[6] Aveni, _AI Guardrails and Monitoring That Actually Work in Financial Services_, 2025. Disponível em: [https://aveni.ai/blog/ai-guardrails-and-monitoring-that-actually-work-in-financial-services/](https://aveni.ai/blog/ai-guardrails-and-monitoring-that-actually-work-in-financial-services/)  
-[7] arXiv, _Assessing the Auditability of AI-Integrating Systems_, 2025. Disponível em: [https://arxiv.org/html/2411.08906v1](https://arxiv.org/html/2411.08906v1)  
-[8] Cloudflare, _Guardrails in AI Gateway_, 2025. Disponível em: [https://blog.cloudflare.com/guardrails-in-ai-gateway/](https://blog.cloudflare.com/guardrails-in-ai-gateway/)  
-[9] Guardrails AI, _Performance Considerations_, 2024. Disponível em: [https://guardrailsai.com/docs/concepts/performance](https://guardrailsai.com/docs/concepts/performance)  
-[10] Dynamo, _How to Evaluate Guardrails_, 2024. Disponível em: [https://www.dynamo.ai/models/07-how-to-evaluate-guardrails](https://www.dynamo.ai/models/07-how-to-evaluate-guardrails)  
-[11] YLD, _Semantics and Syntax in GenAI Applications_, 2025. Disponível em: [https://www.yld.io/blog/semantics-and-syntax-in-genai-applications](https://www.yld.io/blog/semantics-and-syntax-in-genai-applications)  
-[12] Bud Ecosystem, _Guardrail Testing, Validating, Tools and Frameworks_, 2025. Disponível em: [https://blog.budecosystem.com/llm-guardrails-guardrail-testing-validating-tools-and-frameworks/](https://blog.budecosystem.com/llm-guardrails-guardrail-testing-validating-tools-and-frameworks/)  
+==[4] Python Instructor, _Understanding Semantic Validation with Structured Outputs_, 2025. Disponível em: [https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/](https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/)==  
+==[5] SKA Observatory, _Semantic Validation_, 2024. Disponível em: [https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html](https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html)==  
+==[9] Guardrails AI, _Performance Considerations_, 2024. Disponível em: [https://guardrailsai.com/docs/concepts/performance](https://guardrailsai.com/docs/concepts/performance)==  
 [13] Cloudflare, _Guardrails in AI Gateway (Case Example)_, 2025. Disponível em: [https://blog.cloudflare.com/guardrails-in-ai-gateway/](https://blog.cloudflare.com/guardrails-in-ai-gateway/)
 [14] Bai, Y. et al., _Constitutional AI: Harmlessness from AI Feedback_, arXiv preprint arXiv:2212.08073, 2022. Disponível em: https://arxiv.org/abs/2212.08073
-[15 ]Xu, A. et al., _Designing Multi-layered Runtime Guardrails for Foundation Model Applications_, arXiv preprint arXiv:2408.02205, 2024.
+==[15 ]Xu, A. et al., _Designing Multi-layered Runtime Guardrails for Foundation Model Applications_, arXiv preprint arXiv:2408.02205, 2024. [2408.02205v2](https://arxiv.org/pdf/2408.02205v2)==
 [16][*usenixsecurity25-villa.pdf](https://www.usenix.org/system/files/usenixsecurity25-villa.pdf)
 [17][*pdf](https://openreview.net/pdf?id=zJAm9nLdaQ)
+==[18] [2502.08142v1.pdf]([Bridging the Safety Gap: A Guardrail Pipeline for Trustworthy LLM Inferences](https://arxiv.org/html/2502.08142))==
+==[19] [@toolsycc/json-repair - npm](https://www.npmjs.com/package/@toolsycc/json-repair)==
+==[20] [The Guard | Your Enterprise AI needs Guardrails](https://www.guardrailsai.com/docs/concepts/guard)==
+==[21] [SoK: Evaluating Jailbreak Guardrails for Large Language Models](https://arxiv.org/pdf/2506.10597v2)==
+==[22] [2502.18878](https://arxiv.org/pdf/2502.18878)==
 
 ---
 
-## **2.3 Decoding Estruturado / Guiado por Gramática**
+## **2.3 Structured / Grammar-Guided Decoding**
 
-**intro**
-
-Decoding estruturado guiado por gramática, conhecido como grammar-constrained decoding (GCD), é uma técnica que modifica o mecanismo interno de geração dos modelos de linguagem (LLMs) para garantir que o output segue regras sintáticas pré-definidas[2305.13971]. ​
+**Structured decoding guided by grammar**, also known as **grammar-constrained decoding (GCD)**, is a technique that modifies the internal generation mechanism of large language models (LLMs) to ensure that the output follows predefined syntactic rules [4].
 
 ---
 
-## Pontos Fortes
+## **Strengths**
 
-- ==**Garantia estrutural**. GCD oferece uma garantia formal de que o output está sempre conforme uma gramática definida (JSON válido, código compilável, árvore sintática correta)[2305.13971].== ​​
+- **Structural guarantee.** GCD provides a formal assurance that the output will always conform to a defined grammar (e.g., valid JSON, compilable code, correct syntax tree) [4].
     
-- ==**Generalidade e flexibilidade**. O artigo [2305.13971] argumenta que gramáticas formais podem descrever o espaço de output para uma vasta gama de tarefas[2305.13971].==
+- **Generality and flexibility.** The study [4] argues that formal grammars can describe the output space for a wide range of tasks.
     
-- **Desempenho competitivo em low-resource e few-shot**. ==Estudos sugerem que GCD pode alcançar performance próxima do fine-tuning especializado em alguns cenários, especialmente onde há poucos dados ou orçamentos restritos[2305.13971]==. ==Em tarefas de extração clínica com pouco treino, GCD pode dar saltos de F1 de 0.062 para 0.413 ou de 0.102 para 0.47 sem grandes esforços de labeling.[pmc.ncbi.nlm.nih](https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/)==​
-
----
-
-## Limitações
-
-- ==**Sintaxe ≠ Semântica**. GCD garante estrutura, não significado; podes ter outputs formalmente corretos e semanticamente irrelevantes, inconsistentes ou até perigosos[2305.13971].[aclanthology+3](https://aclanthology.org/2025.acl-srw.59.pdf)==​
-    
-- ==**Cobertura e generalização escassa**. Os estudos frequentemente demonstram sucesso apenas em algumas tarefas (parsing, geração de código, templates médicos); extrapolar para "todas as tarefas estruturadas" continua sem suporte forte na literatura universal[2305.13971]==.​
-    
-- ==**Incompatível com APIs comerciais**. O artigo e vários relatos práticos frisam que GCD geralmente não pode ser usado com modelos de cloud/API como GPT-4 ou Claude, porque não é possível controlar as escolhas internas de decoding[2305.13971].==​
-    
-- ==**Overhead e latência dependentes da gramática**. A introdução de parsing e masking pode aumentar tempo de resposta substancialmente em gramáticas complexas ou tarefas de alta escalabilidade[2305.13971]==.
-
----
-
-## Adequação
-
-**Quando usar GCD**:
-
-- ==Tarefas em que garantir o formato do output é mais importante do que tratar significado (ficheiros estruturados, templates fixos, parsing, geração de código)[2305.13971]==.​
-    
-- ==Prototipagem rápida ou ambientes low-resource, onde fine-tuning é caro, difícil ou impossível[2305.13971].​==
-    
-
-**Quando evitar ou complementar GCD**:
-
-- ==Contextos dependentes de APIs comerciais, sem acesso ao processo de decoding interno[2305.13971].​==
-    
-- ==Tarefas que exigem compreensão semântica ou dependências contextuais difíceis de formalizar gramaticalmente[2305.13971].[aclanthology+3](https://aclanthology.org/2025.acl-srw.59.pdf)==​
-    
-- ==Grandes sistemas distribuídos ou aplicações real-time, onde overhead pode ser crítico.[openreview+3](https://openreview.net/forum?id=L6CYAzpO1k)==​
+- **Competitive performance in low-resource and few-shot settings.** Research suggests that GCD can achieve performance close to specialized fine-tuning in certain cases, especially where data or computational budgets are limited [4]. In clinical extraction tasks with limited training data, GCD has been shown to raise F1 scores from 0.062 to 0.413 or from 0.102 to 0.47 [1].
     
 
 ---
 
-**Considerações Críticas**
+## **Limitations**
 
-A literatura realça o potencial de GCD para expandir a aplicabilidade dos LLMs em tarefas estruturadas e reduzir barreiras de entrada associadas ao fine-tuning, mas alerta que a garantia estrutural não é sinónimo de adequação universal. Devem ser ponderados os trade-offs e limitações reais, integrando GCD como solução parcial, nunca como substituto total de outras técnicas — e sempre fundamentando empiricamente a adoção para o teu cenário específico[2305.13971].​
+- **Syntax ≠ Semantics.** GCD guarantees structure, not meaning; the outputs may be formally correct but semantically irrelevant or inconsistent [4][2].
+    
+- **Incompatibility with commercial APIs.** The literature and practical reports emphasize that GCD generally cannot be applied to cloud-based or API-based models such as GPT-4 or Claude, since decoding choices cannot be controlled directly [4].
+    
+- **Grammar-dependent overhead and latency.** The introduction of parsing and masking can substantially increase response time in complex grammars or large-scale applications [4].
+    
+
+---
+
+## **Suitability**
+
+**When to use GCD:**
+
+- Tasks where ensuring the output format is more important than the meaning (structured files, fixed templates, parsing, code generation) [4].
+    
+- Rapid prototyping or low-resource environments where fine-tuning is expensive, impractical, or impossible [4].
+    
+
+**When to avoid or complement GCD:**
+
+- Scenarios relying on commercial APIs [4].
+    
+- Tasks requiring semantic understanding or context-dependent reasoning that cannot be easily formalized via grammar [4][2].
+    
+- Large-scale distributed systems or real-time applications where overhead is critical [3].
+    
+
+---
+
+## **Critical Considerations**
+
+The literature highlights the potential of GCD to broaden the applicability of LLMs for structured tasks and reduce the entry barriers associated with fine-tuning. However, it cautions that structural guarantees do not equate to universal adequacy. Trade-offs and real-world limitations should be carefully considered, integrating GCD as a **partial solution**, not a total substitute for other techniques — and its adoption should always be empirically justified for the specific context [4].
+
+---
+
+### **References**
+
+[1] _PMC_, “LLM-based Clinical Information Extraction Study,” 2025. Available: [https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/](https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/)  
+[2] _ACL Anthology_, “Evaluating Grammar-Constrained Decoding in Semantic Tasks,” 2025. Available: [https://aclanthology.org/2025.acl-srw.59.pdf](https://aclanthology.org/2025.acl-srw.59.pdf)  
+[3] _OpenReview_, “Structured Decoding in Large-Scale Systems,” 2025. Available: [https://openreview.net/forum?id=L6CYAzpO1k](https://openreview.net/forum?id=L6CYAzpO1k)  
+[4] _Zhou et al._, “Grammar-Constrained Decoding for Large Language Models,” _arXiv preprint_ arXiv:2305.13971, 2023. Available: [https://arxiv.org/pdf/2305.13971](https://arxiv.org/pdf/2305.13971)
+
 
 1. [https://www.nexastack.ai/blog/structured-decoding-with-vllm](https://www.nexastack.ai/blog/structured-decoding-with-vllm)
 2. [https://www.aidancooper.co.uk/constrained-decoding/](https://www.aidancooper.co.uk/constrained-decoding/)
 3. [https://www.leewayhertz.com/structured-outputs-in-llms/](https://www.leewayhertz.com/structured-outputs-in-llms/)
 4. [https://aclanthology.org/2023.emnlp-main.674.pdf](https://aclanthology.org/2023.emnlp-main.674.pdf)
 5. [https://agenta.ai/blog/the-guide-to-structured-outputs-and-function-calling-with-llms](https://agenta.ai/blog/the-guide-to-structured-outputs-and-function-calling-with-llms)
-6. [https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/](https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/)
+6. ==[https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/](https://pmc.ncbi.nlm.nih.gov/articles/PMC11747381/)==
 7. [https://acl-bg.org/proceedings/2025/RANLP%202025/pdf/2025.ranlp-1.124.pdf](https://acl-bg.org/proceedings/2025/RANLP%202025/pdf/2025.ranlp-1.124.pdf)
 8. [https://research.tue.nl/en/publications/grammar-constrained-decoding-makes-large-language-models-better-l](https://research.tue.nl/en/publications/grammar-constrained-decoding-makes-large-language-models-better-l)
-9. [https://aclanthology.org/2025.acl-srw.59.pdf](https://aclanthology.org/2025.acl-srw.59.pdf)
+9. ==[https://aclanthology.org/2025.acl-srw.59.pdf](https://aclanthology.org/2025.acl-srw.59.pdf)==
 10. [https://aclanthology.org/2025.acl-long.551.pdf](https://aclanthology.org/2025.acl-long.551.pdf)
-11. [https://openreview.net/forum?id=L6CYAzpO1k](https://openreview.net/forum?id=L6CYAzpO1k)
+11. ==[https://openreview.net/forum?id=L6CYAzpO1k](https://openreview.net/forum?id=L6CYAzpO1k)==
 12. [https://arxiv.org/pdf/2502.05111.pdf](https://arxiv.org/pdf/2502.05111.pdf)
 13. [https://proceedings.neurips.cc/paper_files/paper/2024/file/2bdc2267c3d7d01523e2e17ac0a754f3-Paper-Conference.pdf](https://proceedings.neurips.cc/paper_files/paper/2024/file/2bdc2267c3d7d01523e2e17ac0a754f3-Paper-Conference.pdf)
+14. ==[2305.13971](https://arxiv.org/pdf/2305.13971)==
 
 ---
 
