--- a/thesis intermedia/3- state of art/3.1 Panorama Tecnológico e Soluções Existentes.md
+++ b/thesis intermedia/3- state of art/3.1 Panorama Tecnológico e Soluções Existentes.md
@@ -53,55 +53,87 @@ The **Contact Center as a Service (CCaaS)** market continues to evolve rapidly i
 
 ### Individual Critical Analysis
 
-**NICE (CXone / Enlighten)**  
-NICE leads with advanced NL→Dash capabilities via **Enlighten Actions**, **CXone Dashboards**, and the **Observability Copilot** (introduced in the 25.3 release, August 2025) [3]. Users can query dashboard data in natural language (e.g., _“Top 10 supervisors with most sessions?”_) and modify elements like categories/intents via Copilot commands (add/remove/rename in 25.4 release, October 2025) [4]. AI filtering with NL prompts supports multi-ACD and languages. However, **no evidence of full one-shot generation** exists—structural elements (e.g., layout, thresholds) still require manual configuration. It remains closer to **Q&A/ad-hoc interaction** than to end-to-end automation. Criticism: dependence on iterative prompts may frustrate users, and integration with real-time streams is inconsistent.
+### NICE (CXone / Enlighten AI)
 
-**Genesys (Cloud CX)**  
-Genesys offers strong analytics via **Reports, Views, and Dashboards**, with 2025 updates introducing **AI Agents** for NL access to metrics, trends, and agent activity (September 2025) [5]. **Virtual Agent dashboards** (July 2025) provide preconfigured views but remain manual/UI-based [6]. There is no public documentation of NL→Dash for automatic layout generation or semantic configuration. Criticism: the absence of NL for initial dashboard creation makes it less advanced than NICE, focusing more on conversational agents than structured analytics.
+The **NICE** platform, through its **CXone** and **Enlighten AI** solutions, is positioned as one of the most advanced systems in the field of **customer experience (CX) analytics** and **AI-assisted operational intelligence**. The key differentiator of its offering lies in the integration of **natural language query mechanisms** applied directly to operational data. This functionality allows users to **ask questions in natural language and automatically generate analytical reports and dashboards** without requiring complex configuration processes or specialized technical expertise [1]. Such an approach democratizes access to information, reduces the time required for performance analysis, and accelerates decision-making in contact center environments [2].
 
-**Talkdesk (Explore / Live Dashboards)**  
-**Talkdesk Explore** and **Live Dashboards** emphasize **real-time monitoring**, with conversational AI investments such as **Autopilot** supporting **59+ languages** (2025) [7]. Nevertheless, dashboard creation remains manual through a visual editor, with **no evidence of NL→Dash or semantic mapping pipelines**. 2025 updates highlight **conversational flows**, not dashboard automation. Criticism: focus on customer-facing AI neglects analytical automation, leaving supervisors dependent on manual setup.
+Despite these advanced capabilities, **there is no evidence that the platform supports the full and automated creation of complete dashboards** — that is, the generation of **layouts, key performance indicators (KPIs), interactive filters, and configured visualizations** from a single natural language prompt. Dashboard construction remains **dependent on manual configuration and the use of predefined widgets**, indicating that full automation of the visual experience is not yet supported [1][3].
 
-**Five9 (Analytics / AI Insights)**  
-Five9 expanded GenAI capabilities with **AI Insights** and **Spotlight** (launched March 2025), enabling **NL queries** like _“Ask Your Data Anything”_ and custom metrics generation [8][9]. While insightful for analytics, dashboard construction remains manual (selection of campaigns/skills via UI). There is **no one-shot dashboard generation**. Criticism: despite stronger NL insights, lack of automation increases inconsistency risk in production data; **30% of GenAI PoCs failed in 2025** across the sector [10].
+In summary, NICE stands out as a **leader in the integration of conversational AI for operational data exploration and real-time analytics**, yet **there are no public records confirming full automation of dashboard creation** or the ability to generate complete dashboards from a single prompt.
+
+---
+
+### Referências
+
+[1] CX Today, “_NICE Enlighten AI: Features, Benefits & Pricing_,” CX Today, 21 de março de 2025. [Online]. Disponível em: [https://www.cxtoday.com/contact-center/nice-enlighten-ai-features-benefits-pricing/](https://www.cxtoday.com/contact-center/nice-enlighten-ai-features-benefits-pricing/?utm_source=chatgpt.com)
+
+[2] NICE, “_Enlighten Actions (Copilot for Leaders)_,” NICE Ltd., 2025. [Online]. Disponível em: [https://www.nice.com/platform/workflows/](https://www.nice.com/platform/workflows/?utm_source=chatgpt.com)
+
+[3] NICE, “_CXone Mpower – Product Overview_,” NICE Ltd., 2025. [Online]. Disponível em: [https://www.nice.com/](https://www.nice.com/?utm_source=chatgpt.com)
+
+
+
+
+
+### Genesys (Cloud CX)
+
+In **2025**, **Genesys Cloud CX** introduced AI agents such as the **Analytics Explorer**, which enable **natural language queries** on **metrics, trends, and agent activity**, providing access to both **historical and real-time data** [1]. In parallel, the platform released the **Virtual Agent Performance Dashboard**, a **pre-built dashboard** designed to monitor the performance of virtual agents [2]. **There is no public reference to any capability for fully automated dashboard generation via natural language**; the creation of visualizations remains based on **manual configuration** and **predefined templates**, indicating that full automation of analytical layouts is not yet supported [1], [2].
+
+---
+
+### Referências
+
+[1] Genesys, “_Introducing the Analytics Explorer AI Skill in Genesys Cloud CX_,” Genesys Blog, 16 de julho de 2025. [Online]. Disponível em: https://www.genesys.com/blog/post/analytics-explorer-ai-skill-genesys-cloud-cx
+
+[2] Genesys, “_Virtual Agent Performance Dashboard release (21 July 2025)_,” _Release Notes – Genesys Cloud CX_, 2025. [Online]. Disponível em: [https://help.mypurecloud.com/releasenote/july-21-2025/](https://help.mypurecloud.com/releasenote/july-21-2025/?utm_source=chatgpt.com)
+### talkdesk
+The **Talkdesk Explore** and **Live Dashboards** tools focus on **real-time monitoring**, providing **performance visualizations and operational KPIs with continuously updated data** [1]. Although the company has heavily invested in **conversational AI**, particularly through **Talkdesk Autopilot**, which supports **over 59 languages** for **conversation flows and service automation** [2], **dashboard creation remains entirely manual**, performed through the **visual editor** or using **predefined templates** [1], [3].
+
+**There is no public functionality that allows complete dashboards to be automatically generated through natural language**, nor any **semantic mapping pipelines between natural language and dashboard layout configuration**. The main advances in Talkdesk’s AI remain focused on **service automation and customer experience enhancement**, rather than on **advanced self-service analytics**. In practice, this **keeps supervisors dependent on manual dashboard creation**, limiting the potential for **real-time analytical automation** within the product [1]–[3].
+
+---
+
+### Referências
+
+[1] Talkdesk, “_Create and Customize Dashboards in Explore_,” _Talkdesk Knowledge Base_, 2025. [Online]. Disponível em: https://support.talkdesk.com/hc/en-us/articles/4402641863447-Create-and-Customize-Dashboards-in-Explore
+
+[2] Talkdesk, “_Talkdesk Autopilot Overview_,” _Talkdesk AI Documentation_, 2025. [Online]. Disponível em: https://support.talkdesk.com/hc/en-us/articles/4409713581335-Talkdesk-Autopilot-Overview
+
+[3] Talkdesk, “_Live Dashboards Overview_,” _Talkdesk Knowledge Base_, 2025. [Online]. Disponível em: https://support.talkdesk.com/hc/en-us/articles/4402635105167-Live-Dashboards-Overview
+
+
+## Five9
+
+In **2025**, **Five9** introduced **Spotlight for AI Insights**, an expansion of its **reporting and intelligent analytics suite** that incorporated **natural language query capabilities**, allowing users to **“ask questions of their data”** and create **custom metrics** in a simple and intuitive way [1]. Despite these advancements making analysis more accessible and intelligent, **dashboard construction remains manual**, carried out through the **graphical interface**, where the user defines campaigns, _skills_, and visualizations. **There is currently no public functionality that enables the fully automatic generation of complete dashboards via natural language**, maintaining a reliance on manual configuration.
+
+---
+
+### Referências
+
+[1] Five9, “_Five9 Introduces Spotlight for AI Insights and Expands Reporting & Analytics Suite_,” _Press Release_, 17 de março de 2025. [Online]. Disponível em: https://www.five9.com/news/press-releases/five9-introduces-spotlight-ai-insights
 
 ---
 
 ### Technical Comparison
 
-The comparative matrix reveals limited NL→Dash maturity in CCaaS, with NICE leading in NL-driven modifications. No vendor currently supports **complete one-shot generation**, including all structural elements. For context, **ThoughtSpot** provides NL queries for ad-hoc visualizations but lacks CCaaS-specific integration [1][2].
+| **Feature / Vendor**                                                 | **NICE (CXone / Enlighten AI)**                                                                                     | **Genesys Cloud CX**                                                    | **Talkdesk**                                                    | **Five9 (AI Insights / Spotlight)**                             |
+| -------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------- | --------------------------------------------------------------- | --------------------------------------------------------------- |
+| **Consulta em linguagem natural (NLQ)**                              | **Sim** — permite fazer perguntas aos dados e gerar **relatórios e gráficos dinâmicos** de forma automática [1]<br> | Sim — consultas sobre métricas, tendências e atividade de agentes [1]   | Não — IA aplicada ao atendimento (Autopilot), não à análise [2] | Sim — “Ask Your Data Anything” para métricas personalizadas [1] |
+| **Criação automática de dashboards completos (prompt-to-dashboard)** | **Não** — montagem manual via widgets e templates [1][3]                                                            | **Não** — dashboards pré-construídos e configuráveis manualmente [1][2] | **Não** — apenas construção manual via editor visual [1][3]     | **Não** — criação manual via UI, sem layout automático [1]      |
+| **Foco principal da IA**                                             | Análise operacional, otimização e insights de CX em tempo real                                                      | Insights conversacionais e analítica de agentes                         | Automação de atendimento e experiência do cliente               | Democratização da análise e reporting inteligente               |
 
-|Vendor|NL→Dash Support|Scope of Generation|NL Modifications|GenAI Integration|Public Evidence (2025 Updates)|
-|---|---|---|---|---|---|
-|NICE|Advanced|Q&A, charts, filtering; partial mods|Yes (add/remove)|Yes (Copilot)|25.3/25.4 Releases; Observability Copilot [3][4]|
-|Genesys|Partial|Manual dashboards; NL metrics access|No|Yes (AI Agents)|Sept 2025 AI Agents; Virtual Dashboards [5][6]|
-|Talkdesk|No|Manual dashboards|No|Partial (NLP)|Autopilot / Voice Agents [7]|
-|Five9|Partial|Manual creation; NL insights/queries|No|Yes (Spotlight)|March 2025 Spotlight / AI Insights [8][9]|
 
 ---
 
 ### Gap Identification
 
-The analysis reveals **persistent gaps**: no vendor interprets a **single prompt** to generate a fully configured dashboard. There is no integration with **semantic metric layers** ensuring consistency, nor with **real-time data streams** for dynamic updates. Furthermore, **GenAI project risk** remains significant—**Gartner (2025)** reports that **over 30% of GenAI projects are abandoned post-PoC**, mainly due to poor reliability and lack of ROI [10][11]. This reinforces the need for controlled semantic layers and deterministic generation methods.
+All platforms support some level of **natural language interaction**, allowing **automated queries and the generation of individual reports or charts**.  
+However, **none implement full multi-widget dashboard creation** — including **layout, filters, KPIs, and update logic** — in an automated way.  
+Dashboard construction still requires **manual intervention**, through **visual editors, widgets, or templates**, which limits both the **scalability of analytics** and the **autonomy of non-technical users**.
 
----
+### Conclusion
 
-### Concluding Synthesis
-
-This analysis exposes a **technological gap** in the CCaaS ecosystem regarding **NL-based dashboard generation**. Platforms fragment between **Q&A interfaces** and **manual configurations**, without any solution for **complete one-shot prompts**. The **proposed internship project** directly addresses this gap through **LLM-driven end-to-end generation**, introducing a **semantic alignment layer**, **validated JSON schemas**, and **real-time integration**. By incorporating **robust validation** and learning from **external failure benchmarks** (e.g., Gartner [10]), the project mitigates current adoption risks and advances the automation frontier within CCaaS analytics.
-
----
-
-### References
-
-[1] ThoughtSpot, _Natural Language Search for Analytics_, 2025.  
-[2] ThoughtSpot, _ThoughtSpot Sage and Agentic BI Overview_, 2025.  
-[3] NICE, _CXone 25.3 Release Notes – Enlighten Actions and Observability Copilot_, Aug. 2025.  
-[4] NICE, _CXone 25.4 Release Preview – Copilot Dashboard Commands_, Oct. 2025.  
-[5] Genesys, _Introducing AI Agents for Cloud CX_, Sept. 2025.  
-[6] Genesys, _Virtual Agent Dashboards Overview_, Jul. 2025.  
-[7] Talkdesk, _AI Agents for Voice – Multilingual Autopilot Overview_, Mar. 2025.  
-[8] Five9, _Spotlight for AI Insights – Product Launch_, Mar. 2025.  
-[9] Five9, _AI Insights Platform Overview_, 2025.  
-[10] Gartner, _Forecast: 30% of GenAI Projects to Be Abandoned Post-PoC by 2025_, 2025.  
-[11] Gartner, _Top Strategic Predictions for 2027: The Future of Agentic AI_, 2025.
+In summary, the four analyzed platforms — **NICE CXone**, **Genesys Cloud CX**, **Talkdesk**, and **Five9** — demonstrate **different levels of AI integration** within their analytical capabilities.  
+**NICE** and **Genesys** stand out for offering **natural language query** features that enable the generation of **automatic reports and charts**, although they still lack full dashboard creation capabilities.  
+**Five9** follows a similar approach by introducing **natural language interaction** for **custom metrics**, while **Talkdesk** remains more focused on **conversational AI and service automation**, with **fully manual dashboards**.  
+Overall, all solutions remain **dependent on manual configuration** to build complete dashboards, showing that **full automation of dashboard generation through AI** is still **not a feature available** in the CCaaS market as of 2025.
